--- a/pom.xml
+++ b/pom.xml
@@ -31,14 +31,14 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>5.3.10</version> <!-- 此處使用最新版本，請根據需要調整 -->
+			<version>5.3.10</version> 
 		</dependency>
 
 		<!-- Servlet API，Spring MVC 需要 -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-			<version>4.0.1</version> <!-- 此處使用最新版本，請根據需要調整 -->
+			<version>4.0.1</version> 
 		</dependency>
 	</dependencies>
 
